# aspect-cli

./: BUILD.bazel  WORKSPACE  go.mod
bazel/: spawn.go
cmd/: BUILD.bazel  outputs.go
cmd/aspect/root/: root.go
demo/: README.md  demo.sh  start.sh
docs/help/topics/: BUILD.bazel  aspect  plugins
docs/plugin-protocol/: BUILD.bazel  aspectplugin0.1.proto
pkg/aspect/clean/: BUILD.bazel  clean.go  clean_test.go  darwin.go  linux.go
pkg/plugin/system/: BUILD.bazel  system.go  system_test.go
pkg/plugin/system/mock/: BUILD.bazel
pkg/plugin/v1alpha2/client/: BUILD.bazel  client.go
pkg/plugin/v1alpha2/client/mock/: BUILD.bazel
pkg/plugin/v1alpha2/config/: BUILD.bazel  finder.go  parser.go
pkg/plugin/v1alpha2/config/mock/: BUILD.bazel
pkg/plugin/v1alpha2/system/: BUILD.bazel  system.go  system_test.go
pkg/stdlib/: remap.go
pkg/stdlib/mock/: BUILD.bazel
proto/: BUILD.bazel
proto/analysis/: BUILD.bazel  analysis_v2.proto  doc.go
proto/blaze_query/: BUILD.bazel  build.proto  doc.go
